<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_contact"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/text_view_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_contact"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="10pt">
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:id="@+id/contact_send_to"
            android:text="@string/contact_send_to"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_name"
            android:hint="@string/contact_name_hint"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#666666"
            android:textColor="#FFFFFF"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_subject"
            android:hint="@string/contact_subject_hint"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#666666"
            android:textColor="#FFFFFF"
            android:shadowColor="#440000"
            android:inputType="textEmailSubject"/>

        <EditText
            android:id="@+id/contact_body"
            android:layout_height="wrap_content"
            android:hint="@string/contact_body_hint"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:lines="7"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#666666"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent">
        </EditText>

        <!--<CheckBox
            android:id="@+id/contact_check_box"
            android:layout_height="wrap_content"
            android:text="@string/contact_response"
            android:layout_width="fill_parent">
        </CheckBox> -->

        <Button
            android:id="@+id/contact_submit"
            android:layout_height="wrap_content"
            android:text="@string/contact_submit"
            android:onClick="sendFeedback"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>
