<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepersist.cmpe235lab1.TutorialActivity">

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="5dp" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        >
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:background="#777777">
    <TextView android:text="@string/tutorial_1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#777777"
        android:onClick="playVideo"
        android:textSize="20sp"
        android:id="@+id/TVtutorial_1"
        />
    </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        >
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="#777777">
            <TextView android:text="@string/tutorial_2" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="playVideo"
                android:background="#777777"
                android:textSize="20sp"
                android:id="@+id/TVtutorial_2"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        >
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="#777777">
            <TextView android:text="@string/tutorial_3" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="playVideo"
                android:background="#777777"
                android:textSize="20sp"
                android:id="@+id/TVtutorial_3"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
